--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menu</title>
     <script>"registro.html"</script>
+    
 </head>
-<body>
-    <h2><center>Paises</center></h2>
+<body class="indice">
+    <h2 class="titulo"><center>Paises</center></h2>
     <br><br>
-    <a href="registro.html"><button>Registrar</button><br><br></a>
-    <a href="consultar.php"><button>Consultar</button></a>
+    <a href="registro.html"><button class="btninicio">Registrar</button><br><br></a>
+    <a href="consultar.php"><button class="btninicio">Consultar</button></a>
     
 </body>
 </html>
